--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,14 @@
   border: 1px solid;
   border-radius: 5px;
 }
+h1 {
+  color: blue;
+  font-size: large;
+}
 li {
+  color: green;
+  font-size: medium;
+}
+li:first-letter {
   text-transform: capitalize;
 }
