--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,44 @@
-.weather-app {
-  background-color: lightskyblue;
-  max-width: 600px;
-  margin: 30px auto;
-  padding: 20px;
-  border: 1px solid;
-  border-radius: 5px;
+body {
+  font-family: arial, sans-serif;
 }
+
 h1 {
-  color: blue;
-  font-size: large;
+  color: #878787;
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 28px;
+  margin-bottom: 0;
 }
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 li {
-  color: green;
-  font-size: medium;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  color: rgb(135, 135, 135);
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
 }
+
 li:first-letter {
   text-transform: capitalize;
+}
+
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+.weather-app {
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
 }
 
 .overview {
@@ -42,10 +65,29 @@ li:first-letter {
 }
 
 .weather-temperature .active {
-  color:rgb(33, 33, 33);
+  color: rgb(33, 33, 33);
   cursor: default;
 }
 
 .weather-temperature .active:hover {
   text-decoration: none;
+}
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: #000;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
+
+.weather-forecast-temperatures {
+  font-size: 13px;
 }
