--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: arial, sans-serif;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 h1 {
@@ -86,15 +86,15 @@ li:first-letter {
 
 .weather-forecast-temperatures-max {
   opacity: 0.5;
-  color: #000;
+  color: blueviolet
 }
 
 .weather-forecast-temperatures-min {
   opacity: 0.5;
-  color: #000;
+  color: blueviolet
 }
 
 .weather-forecast-temperatures {
-  color: #000;
+  color: blueviolet
   font-size: 13px;
 }
