--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 body {
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+background-color: gray;
 }
 
 h1 {
@@ -86,15 +87,18 @@ li:first-letter {
 
 .weather-forecast-temperatures-max {
   opacity: 0.5;
-  color: blueviolet
+  color: blueviolet;
+  font-size: 12px;
 }
 
 .weather-forecast-temperatures-min {
   opacity: 0.5;
-  color: blueviolet
+  color: blueviolet;
+  font-size: 12px;
 }
 
 .weather-forecast-temperatures {
-  color: blueviolet
-  font-size: 13px;
+  opacity: 0.5;
+  color: blueviolet;
+  font-size: 12px;
 }
